Fix wrong overflow: scroll-y

--- a/static.getnightingale.com/css/general.css
+++ b/static.getnightingale.com/css/general.css
@@ -12,11 +12,14 @@ audio:not([controls]) { display: none; }
    ========================================================================== */
 /* General styles */  
 
+html {
+	overflow-y: scroll;
+}
+
 body {
 	background-image: url('http://static.getnightingale.com/img/gradent.png');
 	background-repeat:repeat-x;
 	font-family: 'Open Sans', sans-serif;
-	overflow-y: scroll;
 }
 
 /* header/nav */
